# backend

./: .gitignore  README.md  app.py  compose.yaml  dockerfile  main.py  openapi.yaml  openapi_config.yaml  pyproject.toml  requirements.txt  settings.py
.github/: pull_request_template.md
docs/: openapi.yaml
docs/swagger/: index.html
domain/: dream.py  follow.py  tables.py  tree.py  user.py
handler/: auth_handler.py  dream_handler.py  follow_handler.py  tree_handler.py  user_handler.py
mock/: compose.yaml
repository/: dream_repository.py  follow_repository.py  tree_repository.py  user_repository.py
server/: main.py  settings.py
server/domain/: dream.py  follow.py  tree.py  user.py
service/: auth_service.py  dream_service.py  follow_service.py  tree_service.py  user_service.py
service/schema/: auth_schema.py  tree_schema.py  user_schema.py
test/: api.http
