[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "Werkzeug (>=3.0.0,<4.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "flask-pydantic (>=0.12.0,<0.13.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
